--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </section>
     <footer>
-        <div>
+        <div class="info_logo">
             <figure>
                 <img src="img/Logo.svg" alt="">
             </figure>
@@ -93,13 +93,14 @@
         <div class="mas_info">
             <h1>Más información</h1>
             <i class="fa-solid fa-clock reloj"></i>
-            <p class="horario">
-                L-V: 9:00 Am – 5:00 Pm <br>
-                S-D: 11:00 Am – 16:00 Pm
+            <p class="horario1">
+                L-V: 9:00 am – 5:00 pm <br>
+                S-D: 11:00 am – 16:00 pm
             </p>
-            <p>
+            <i class="fa-solid fa-envelope correo"></i>
+            <p class="correo_btn">
                 <a href="#" class="btn_correo">
-                    Officeone@Youremail.Com</a>
+                    Officeone@youremail.com</a>
             </p>
         </div>
     </footer>
