--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Principal</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <link rel='stylesheet' href='css/movil.css'>
     <link rel='stylesheet' href='css/tinycarousel.css'>
-    <link rel='stylesheet' href='css/slidefotos.css'>
     <script src="http://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src='https://kit.fontawesome.com/2ee0245f3d.js' crossorigin='anonymous'></script>
     <script src="js/wow.min.js"></script>
     <script src="js/responsiveslides.min.js"></script>
+    <script src="js/funciones.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
     <script>
         $(function () {
             $("#slider4").responsiveSlides({
@@ -77,7 +79,18 @@
         </div>
     </section>
     <section>
-
+        <div style="height: 150px; overflow: hidden;">
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C230.52,136.67 242.37,-84.38 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9F6FF;">
+                </path>
+            </svg>
+        </div>
+    </section>
+    <section class="video">
+        <h1>Conoce de nuestros servicios</h1>
+        <div id="contenedorvideo">
+            <iframe src="https://www.youtube.com/embed/-KR82M3Czuk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </section>
     <footer>
         <div class="info_logo">
@@ -120,32 +133,55 @@
     <section id="formulario" class="fondomodal">
         <div class="contenidomodal">
             <div class="estructuramodal">
-                <i id="cerrarbtn" class="cerrar modal fas fa-times-circle wow animate__animated animate__rotateIn"></i>
+                <i id="cerrarbtn1" class="cerrar modal fas fa-times-circle wow animate__animated animate__rotateIn"></i>
             </div>
             <form action="" method="post">
-                
+                <div class="elem-group">
+                    <label for="name">Nombre</label>
+                    <input type="text" id="name" name="visitor_name" placeholder="Nombre de ejemplo" pattern=[A-Z\sa-z]{3,20} required>
+                </div>
+                <div class="elem-group">
+                    <label for="email">Correo electrónico</label>
+                    <input type="email" id="email"name="visitor_email" placeholder="ejemplo@email.com" required>
+                </div>
+                <div class="elem-group">
+                    <label for="department-selection">Área a contactar</label>
+                    <select id="department-selection" name="concerned_department" required>
+                        <option value="">Selecciona un área</option>
+                        <option value="billing">Facturación</option>
+                        <option value="marketing">Marketing</option>
+                        <option value="technical support">Servicio al cliente</option>
+                    </select>
+                </div>
+                <div class="elem-group">
+                    <label for="title">Motivo de contacto</label>
+                    <input type="text" id="title" name="email_title" required placeholder="Problema/Consulta" pattern=[A-Za-z0-9\s]{8,60}>
+                </div>
+                <div class="elem-group">
+                    <label for="message">Solicitud</label> <textarea id="message" name="visitor_message" placeholder="Escribe tu mensaje aquí." required></textarea>
+                </div>
+                <button type="submit">Enviar mensaje</button>
             </form>
         </div>
     </section>
     <script>
-        var fondomodal = document.getElementById("formulario");
+        var form = document.getElementById("formulario");
         var btn_cotizar = document.getElementById("cotizar");
-        var cerrar = document.getElementById("cerrarbtn");
+        var cerrar1 = document.getElementById("cerrarbtn1");
 
-        function tiempo(){
-            fondomodal.style.display = "block";
+        function tiempo() {
+            form.style.display = "block";
         }
-        // setTimeout(tiempo, 2000);
 
-        btn_cotizar.onclick = function (){
-            fondomodal.style.display = "block";
+        btn_cotizar.onclick = function () {
+            form.style.display = "block";
         };
-        cerrar.onclick = function (){
-            fondomodal.style.display = "none";
+        cerrar1.onclick = function () {
+            form.style.display = "none";
         };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
-                fondomodal.style.display = "none";
+        window.onclick = function (event) {
+            if (event.target == form) {
+                form.style.display = "none";
             }
         };
     </script>
@@ -163,16 +199,16 @@
         var fondomodal = document.getElementById("modal");
         var cerrar = document.getElementById("cerrarbtn");
 
-        function tiempo(){
+        function tiempo() {
             fondomodal.style.display = "block";
         }
         setTimeout(tiempo, 4000);
 
-        cerrar.onclick = function (){
+        cerrar.onclick = function () {
             fondomodal.style.display = "block";
         };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
+        window.onclick = function (event) {
+            if (event.target == fondomodal) {
                 fondomodal.style.display = "none";
             }
         };
@@ -183,4 +219,5 @@
         });
     </script>
 </body>
+
 </html>
