--- a/acerca-de.html
+++ b/acerca-de.html
@@ -12,11 +12,15 @@
     <script src='https://kit.fontawesome.com/2ee0245f3d.js' crossorigin='anonymous'></script>
     <script src="js/wow.min.js"></script>
     <script src="js/funciones.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script>
+        new WOW().init();
+    </script>
     <i id="subir" class="fa-solid fa-chevron-up"></i>
     <header>
         <p class="horario">Working Hours: 08:00 AM - 10:00 PM (Mon-Sat)</p>
@@ -41,6 +45,43 @@
         <a href="contacto.html">Contacto</a>
         <a href="#" class="btn_cotizar" id="cotizar">Cotizaciones</a>
     </nav>
+    <section class="contacto_titulo">
+        <h1>Acerca de</h1>
+    </section>
+    <section id="acercade">
+        <div class="fondo1">
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9F6FF;" >
+                </path>
+            </svg>
+            <h1 class="wow animate__animated animate__backInDown title3" >25 YEARS OF EXPERIENCE</h1>
+            <h2 class="wow animate__animated animate__backInDown title4">A Better Choice For Better Cleaning For You</h2>
+            <figure class="foto2 wow animate__animated animate__backInDown">
+                <img src="img/aboutus2.jpg" alt="" class="imagenau2">
+            </figure>
+            <figure class="foto1 wow animate__animated animate__backInDown">
+                <img src="img/aboutus1.jpg" alt="" class="imagenau1">
+            </figure>
+            <p class="wow animate__animated animate__backInDown textau1">
+                Sed posuere consectetur est at lobortis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+            </p>
+            <div class="cuadro1 wow animate__animated animate__backInDown">
+                <h2>2.5k</h2>
+                <h1>Property <br> cleaned</h1>
+            </div>
+            <div class="cuadro2 wow animate__animated animate__backInDown">
+                <h2>507</h2>
+                <h1>Client satisfied</h1>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <h1 class="title5">OUR SUPERTEAM</h1>
+        <h2 class="title6">Our Dedicated Team Ready To Do Our Best Services</h2>
+        <p class="textteam1">
+            Donec consequat tristique venenatis. Mauris vitae vestibulum lectus. Ut at enim ac ante gravida fermentum vitae nec magna. Phasellus ut aliquet tellus. Praesent consequat ac dui eu posuere.
+        </p>
+    </section>
     <footer>
         <div class="info_logo">
             <figure>
