--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <a href="contacto.html">Contacto</a>
         <a href="#" class="btn_cotizar" id="cotizar">Cotizaciones</a>
     </nav>
-    <section>
+    <section class="slidefotos">
         <div class="callbacks_container">
             <ul class="rslides" id="slider4">
                 <li>
