--- a/acerca-de.html
+++ b/acerca-de.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de</title>
     <link rel='stylesheet' href='css/estilo.css'>
-    <link rel='stylesheet' href='css/movil.css'>
     <link rel='stylesheet' href='css/tinycarousel.css'>
     <script src="http://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src='https://kit.fontawesome.com/2ee0245f3d.js' crossorigin='anonymous'></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/responsiveslides.min.js"></script>
     <script src="js/funciones.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@300;500&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <script>
         new WOW().init();
@@ -51,27 +53,33 @@
     <section id="acercade">
         <div class="fondo1">
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9F6FF;" >
+                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #E9F6FF;">
                 </path>
             </svg>
-            <h1 class="wow animate__animated animate__backInDown title3" >25 YEARS OF EXPERIENCE</h1>
-            <h2 class="wow animate__animated animate__backInDown title4">A Better Choice For Better Cleaning For You</h2>
-            <figure class="foto2 wow animate__animated animate__backInDown">
-                <img src="img/aboutus2.jpg" alt="" class="imagenau2">
-            </figure>
-            <figure class="foto1 wow animate__animated animate__backInDown">
-                <img src="img/aboutus1.jpg" alt="" class="imagenau1">
-            </figure>
-            <p class="wow animate__animated animate__backInDown textau1">
-                Sed posuere consectetur est at lobortis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
-            </p>
-            <div class="cuadro1 wow animate__animated animate__backInDown">
-                <h2>2.5k</h2>
-                <h1>Property <br> cleaned</h1>
-            </div>
-            <div class="cuadro2 wow animate__animated animate__backInDown">
-                <h2>507</h2>
-                <h1>Client satisfied</h1>
+            <div class="posicion1">
+                <h1 class="wow animate__animated animate__backInDown title3">25 YEARS OF EXPERIENCE</h1>
+                <h2 class="wow animate__animated animate__backInDown title4">A Better Choice For Better Cleaning For You
+                </h2>
+                <figure class="foto2 wow animate__animated animate__backInDown">
+                    <img src="img/aboutus2.jpg" alt="" class="imagenau2">
+                </figure>
+                <figure class="foto1 wow animate__animated animate__backInDown">
+                    <img src="img/aboutus1.jpg" alt="" class="imagenau1">
+                </figure>
+                <p class="wow animate__animated animate__backInDown textau1">
+                    Sed posuere consectetur est at lobortis.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                    elit
+                    tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                </p>
+                <div class="cuadro1 wow animate__animated animate__backInDown">
+                    <h2>2.5k</h2>
+                    <h1>Property <br> cleaned</h1>
+                </div>
+                <div class="cuadro2 wow animate__animated animate__backInDown">
+                    <h2>507</h2>
+                    <h1>Client satisfied</h1>
+                </div>
             </div>
         </div>
     </section>
@@ -79,8 +87,111 @@
         <h1 class="title5">OUR SUPERTEAM</h1>
         <h2 class="title6">Our Dedicated Team Ready To Do Our Best Services</h2>
         <p class="textteam1">
-            Donec consequat tristique venenatis. Mauris vitae vestibulum lectus. Ut at enim ac ante gravida fermentum vitae nec magna. Phasellus ut aliquet tellus. Praesent consequat ac dui eu posuere.
+            Donec consequat tristique venenatis. Mauris vitae vestibulum lectus. Ut at enim ac ante gravida fermentum
+            vitae nec magna. Phasellus ut aliquet tellus. Praesent consequat ac dui eu posuere.
         </p>
+        <div class="contenedorcards">
+            <article class="card">
+                <figure class="fotocard">
+                    <img src="img/team1.jpg" alt="">
+                </figure>
+                <div class="filtrocard">
+                </div>
+                <div class="nombrecard">
+                    <h3>John Doe</h3>
+                    <p>Managing Director</p>
+                </div>
+                <div class="redescard">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="fotocard">
+                    <img src="img/team2.jpg" alt="">
+                </figure>
+                <div class="filtrocard">
+                </div>
+                <div class="nombrecard">
+                    <h3>Aachen Magnus</h3>
+                    <p>Residence Cleaning</p>
+                </div>
+                <div class="redescard">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </article>
+            <article class="card">
+                <figure class="fotocard">
+                    <img src="img/team3.jpg" alt="">
+                </figure>
+                <div class="filtrocard">
+                </div>
+                <div class="nombrecard">
+                    <h3>Jose Malaga</h3>
+                    <p>Interior Detaliling</p>
+                </div>
+                <div class="redescard">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                </div>
+            </article>
+        </div>
+    </section>
+    <section id="vision_mision">
+        <div class="fondo2">
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: #ECF9F7;">
+                </path>
+            </svg>
+            <div class="posicion2">
+                <h1 class="title7">VISION AND MISSION</h1>
+                <h2 class="title8">The Original Eco-Friendly Cleaning Company In San Francisco</h2>
+                <p class="textteam2">
+                    Sed sit amet nisi tincidunt, imperdiet ex quis, elementum neque. Aenean at venenatis lacus, sit amet
+                    scelerisque turpis. Sed ac dui rhoncus, facilisis orci et, tincidunt eros.
+                </p>
+                <div class="vm">
+                    <article class="prices">
+                        <i class="fa-solid fa-hand-holding-dollar"></i>
+                        <br><br>
+                        <h2>
+                            Competitive Prices
+                        </h2>
+                        <br>
+                        <p>
+                            Fusce pretium maximus diam. Donec non orci eget mauris dapibus volutpat.
+                        </p>
+                    </article>
+                    <article class="services">
+                        <i class="fa-solid fa-hand-holding-heart"></i>
+                        <br><br>
+                        <h2>
+                            Eco-Friendly Services
+                        </h2>
+                        <br>
+                        <p>
+                            Mauris aliquam malesuada justo, sit amet viverra odio porta sit amet.
+                        </p>
+                    </article>
+                    <article class="subcontractor">
+                        <i class="fa-solid fa-file-signature"></i>
+                        <br><br>
+                        <h2>
+                            No Subcontractor Services
+                        </h2>
+                        <br>
+                        <p>
+                            Duis in quam lobortis, tristique ligula eget, interdum sem.
+                        </p>
+                    </article>
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="info_logo">
@@ -135,19 +246,19 @@
         var btn_cotizar = document.getElementById("cotizar");
         var cerrar = document.getElementById("cerrarbtn");
 
-        function tiempo(){
+        function tiempo() {
             fondomodal.style.display = "block";
         }
         // setTimeout(tiempo, 2000);
 
-        btn_cotizar.onclick = function (){
+        btn_cotizar.onclick = function () {
             fondomodal.style.display = "block";
         };
-        cerrar.onclick = function (){
+        cerrar.onclick = function () {
             fondomodal.style.display = "none";
         };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
+        window.onclick = function (event) {
+            if (event.target == fondomodal) {
                 fondomodal.style.display = "none";
             }
         };
@@ -166,16 +277,16 @@
         var fondomodal = document.getElementById("modal");
         var cerrar = document.getElementById("cerrarbtn");
 
-        function tiempo(){
+        function tiempo() {
             fondomodal.style.display = "block";
         }
         setTimeout(tiempo, 5000);
 
-        cerrar.onclick = function (){
+        cerrar.onclick = function () {
             fondomodal.style.display = "block";
         };
-        window.onclick = function (event){
-            if(event.target == fondomodal){
+        window.onclick = function (event) {
+            if (event.target == fondomodal) {
                 fondomodal.style.display = "none";
             }
         };
@@ -186,4 +297,5 @@
         });
     </script>
 </body>
+
 </html>
