--- a/index.html
+++ b/index.html
@@ -78,18 +78,39 @@
             </ul>
         </div>
     </section>
-    <section>
-        <div style="height: 150px; overflow: hidden;">
+    <section id="commercial">
+        <div class="fondo">
             <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
-                <path d="M0.00,49.98 C230.52,136.67 242.37,-84.38 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9F6FF;">
+                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #E9F6FF;">
                 </path>
             </svg>
+            <div>
+                <h1 class="title9">COMMERCIAL & RESIDENCIAL</h1>
+                <h2 class="title10">Our Cleaning Services</h2>
+            </div>
         </div>
     </section>
     <section class="video">
         <h1>Conoce de nuestros servicios</h1>
         <div id="contenedorvideo">
             <iframe src="https://www.youtube.com/embed/-KR82M3Czuk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section id="comentarios">
+        <div class="fondo">
+            <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                <path d="M-0.27,24.17 C130.07,7.41 250.27,56.73 501.41,17.27 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #ECF9F7;">
+                </path>
+            </svg>
+            <div>
+                <h1 class="title11">WHAT CLIENT SAY’S</h1>
+                <h2 class="title12">Client’s Feedback</h2>
+                <div class="servicios2">
+                    <article>
+                        
+                    </article>
+                </div>
+            </div>
         </div>
     </section>
     <footer>
